Add LWP::Simple to the core dependencies
This should have been added in 7d5b33b with `make jsmin` or added even
earlier to the development dependencies with 3d11b14 when
sbin/rt-message-catalog was rewritten to use Launchpad translations.

--- a/sbin/rt-test-dependencies.in
+++ b/sbin/rt-test-dependencies.in
@@ -202,6 +202,7 @@ Sys::Syslog 0.16
 Locale::Maketext 1.06
 Locale::Maketext::Lexicon 0.32
 Locale::Maketext::Fuzzy 0.11
+LWP::Simple
 MIME::Entity 5.425
 Mail::Mailer 1.57
 Email::Address
