Serve individual JS files via the static handler
This is possible now that none of the JS needs to be parsed by Mason,
thanks to 4fe4fc0.

Squished JS is still served via Mason, although that could be replaced
in the future by Plack middleware (i.e.  Plack::Middleware::Assets,
Plack::Middleware::JSConcat, or our own).  RT::Squish::JS makes internal
PSGI requests to the static handler in order to fetch the JS content for
squishing.

--- a/sbin/rt-test-dependencies.in
+++ b/sbin/rt-test-dependencies.in
@@ -254,6 +254,7 @@ HTML::Mason::PSGIHandler 0.52
 Plack 0.9971
 Plack::Handler::Starlet
 CGI::Emulate::PSGI
+LWP::Protocol::PSGI
 .
 
 $deps{'MAILGATE'} = [ text_to_hash( << '.') ];
